# rs-nebula

./: .gitignore  Cargo.toml  README.md  dev.yaml  docker-compose.yml  nebula.toml  promp.md  pylon.toml  test.yaml
.cargo/: config.toml
.claude/: settings.json
config/: dev.yaml  prod.yaml
crates/nebula/: Cargo.toml
crates/nebula-apps/: Cargo.toml
crates/nebula-apps/src/: lib.rs  widgets.rs
crates/nebula-apps/src/accounting/: account.rs  expense.rs  fiscal.rs  gl_port.rs  journal.rs  ledger.rs  mod.rs  reports.rs  seed.rs  tax.rs  widgets.rs
crates/nebula-apps/src/accounting/reports/: balance_sheet.rs  income_statement.rs  mod.rs  trial_balance.rs
crates/nebula-apps/src/scm/: document.rs  gl.rs  mod.rs  seed.rs
crates/nebula-apps/src/scm/inventory/: batch.rs  item.rs  levels.rs  mod.rs  moves.rs  reports.rs  stock.rs  warehouse.rs  widgets.rs
crates/nebula-apps/src/scm/inventory/reports/: mod.rs  reorder.rs  stock_balance.rs  stock_ledger.rs  valuation_summary.rs
crates/nebula-apps/src/scm/pos/: mod.rs  register.rs  sale.rs  session.rs  settings.rs  widgets.rs
crates/nebula-apps/src/scm/pos/reports/: hourly_sales.rs  item_sales.rs  mod.rs  queries.rs  session_summary.rs  tender_mix.rs  z_report.rs
crates/nebula-apps/src/scm/procurement/: documents.rs  invoice.rs  mod.rs  order.rs  payment.rs  receipt.rs  reorder.rs  reports.rs  requisition.rs  returns.rs  rfq.rs  supplier.rs  widgets.rs
crates/nebula-apps/src/scm/procurement/documents/: goods_receipt.rs  mod.rs  purchase_order.rs  purchase_return.rs  requisition.rs  rfq.rs  supplier_invoice.rs  supplier_payment.rs
crates/nebula-apps/src/scm/procurement/reports/: grni.rs  mod.rs  queries.rs  supplier_balances.rs  supplier_scorecard.rs
crates/nebula-apps/src/scm/sales/: credit_note.rs  customer.rs  delivery.rs  documents.rs  invoice.rs  mod.rs  order.rs  payment.rs  pricing.rs  quotation.rs  reports.rs  widgets.rs
crates/nebula-apps/src/scm/sales/documents/: credit_note.rs  customer_receipt.rs  customer_statement.rs  delivery_note.rs  mod.rs  quotation.rs  sales_invoice.rs  sales_order.rs
crates/nebula-apps/src/scm/sales/reports/: ar_aging.rs  ar_reconciliation.rs  delivered_not_billed.rs  mod.rs  queries.rs  sales_margins.rs  sales_register.rs
crates/nebula-apps/src/workspace/: mod.rs
crates/nebula-apps/src/workspace/reports/: mod.rs  overview.rs  sample_register.rs
crates/nebula-server/: Cargo.toml
crates/nebula-server/src/: main.rs
crates/nebula-tests/: Cargo.toml
crates/nebula-tests/src/: lib.rs
crates/nebula-tests/tests/: accounting.rs  audit.rs  auth.rs  authz.rs  cache.rs  company.rs  config.rs  dashboard.rs  db.rs  events.rs  jobs.rs  migration_lock.rs  migrations.rs  money.rs  numbering.rs  openapi_dump.rs  pos.rs  refresh.rs  reporting.rs  repository.rs  scm.rs  scm_gl.rs  sql_migrations.rs  storage.rs  tenancy.rs  tenant_isolation.rs  time.rs  web.rs
crates/nebula/src/: cache.rs  config.rs  crypto.rs  dashboard.rs  db.rs  error.rs  kernel.rs  lib.rs  logging.rs  migrations.rs  module.rs  money.rs  numbering.rs  reporting.rs  repository.rs  sql_migrations.rs  storage.rs  time.rs
crates/nebula/src/account/: events.rs  mod.rs
crates/nebula/src/administration/: audit.rs  company.rs  currencies.rs  mail.rs  mod.rs  password_policy.rs  roles.rs  users.rs
crates/nebula/src/audit/: diff.rs  log.rs  middleware.rs  mod.rs  module.rs  pruner.rs  recorder.rs
crates/nebula/src/auth/: authz.rs  directory.rs  jwt.rs  manager.rs  mod.rs  module.rs  password.rs  password_history.rs  permission.rs  policy.rs  refresh_token.rs  role.rs  role_manager.rs  state.rs  totp.rs  user.rs
crates/nebula/src/dashboard/: web.rs
crates/nebula/src/events/: mod.rs  remote.rs
crates/nebula/src/jobs/: mod.rs
crates/nebula/src/mail/: mod.rs  settings.rs
crates/nebula/src/money/: currency.rs  mod.rs  module.rs
crates/nebula/src/ports/: gl.rs  mod.rs
crates/nebula/src/reporting/: web.rs
crates/nebula/src/storage/: guard.rs
crates/nebula/src/tenancy/: middleware.rs  migrations.rs  mod.rs  tenant.rs
crates/nebula/src/web/: health.rs  mod.rs  trace.rs
crates/pylon/: Cargo.toml
crates/pylon-server/: Cargo.toml
crates/pylon-server/src/: main.rs
crates/pylon-tests/: Cargo.toml
crates/pylon-tests/src/: lib.rs
crates/pylon/src/: config.rs  kernel.rs  lib.rs  logging.rs
migrations/: README.md
migrations/accounting/: accounts_0001.sql  fiscal_0001.sql  journal_0001.sql  journal_0002.sql  journal_0003.sql  tax_0001.sql
migrations/scm/: 0010_items.sql  0020_warehouses.sql  0030_stock.sql  0040_suppliers.sql  0050_orders.sql  0060_receipts.sql  0070_invoices.sql  0080_gl_outbox.sql  0090_batch_serial_capture.sql  0100_returns.sql  0110_requisitions_rfqs.sql  0120_payments.sql  0130_customers.sql  0140_pricing.sql  0150_quotations.sql  0160_sales_orders.sql  0170_deliveries.sql  0180_sales_invoices.sql  0190_credit_notes.sql  0200_sales_payments.sql  0210_pos_registers.sql  0220_pos_sessions.sql  0230_pos_orders.sql  0240_pos_phase5.sql  0250_pos_settings_receipt.sql  0260_pos_receipt_company_fields.sql
