[workspace]
resolver = "3"
members = ["crates/pylon", "crates/pylon-server", "crates/pylon-tests"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["evrykitke <evrykitke@gmail.com>"]

[workspace.dependencies]
pylon = { path = "crates/pylon" }
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
thiserror = "2"
axum = "0.8"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
