[workspace]
resolver = "3"
members = ["crates/nebula", "crates/nebula-server", "crates/nebula-tests"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["evrykitke <evrykitke@gmail.com>"]

[workspace.dependencies]
nebula = { path = "crates/nebula" }
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
thiserror = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["timeout", "catch-panic", "trace", "request-id"] }
utoipa = "5"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-rust_decimal"] }
chrono-tz = "0.10"
rust_decimal = { version = "1", features = ["serde"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
