[workspace]
resolver = "3"
members = ["crates/nebula", "crates/nebula-server", "crates/nebula-tests"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["evrykitke <evrykitke@gmail.com>"]

[workspace.dependencies]
nebula = { path = "crates/nebula" }
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["yaml", "env"] }
thiserror = "2"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["timeout", "catch-panic", "trace", "request-id", "cors", "fs"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-rust_decimal", "with-uuid"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
chrono-tz = "0.10"
rust_decimal = { version = "1", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["otpauth"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
apalis = "0.7"
apalis-redis = "0.7"
apalis-cron = "0.7"
lapin = "4"
futures-lite = "2"
