[package]
name = "nebula-tests"
description = "Proof-of-concept tests for the Nebula framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
nebula.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
serde_json.workspace = true
figment = { workspace = true, features = ["test"] }
chrono.workspace = true
rust_decimal.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
