[package]
name = "nebula"
description = "Nebula — a DDD application framework for building ERPs in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
