[package]
name = "nebula"
description = "Nebula — a DDD application framework for building ERPs in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
chrono-tz.workspace = true
rust_decimal.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
totp-rs.workspace = true
rand.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
apalis.workspace = true
apalis-redis.workspace = true
apalis-cron.workspace = true
redis.workspace = true
lapin.workspace = true
futures-lite.workspace = true
