[package]
name = "nebula"
description = "Nebula — a DDD application framework for building ERPs in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["reporting"]
# The reporting engine's heavy render backends (Typst for PDF). Off = the
# engine still builds and serves, but renders a JSON debug dump.
reporting = [
    "dep:typst",
    "dep:typst-pdf",
    "dep:typst-svg",
    "dep:typst-layout",
    "dep:typst-as-lib",
    "dep:rust_xlsxwriter",
]

[dependencies]
typst = { version = "0.15", optional = true }
typst-pdf = { version = "0.15", optional = true }
typst-svg = { version = "0.15", optional = true }
typst-layout = { version = "0.15", optional = true }
typst-as-lib = { version = "0.16", default-features = false, features = [
    "typst-kit-fonts",
    "typst-kit-embed-fonts",
], optional = true }
rust_xlsxwriter = { version = "0.96", optional = true }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
chrono-tz.workspace = true
rust_decimal.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
totp-rs.workspace = true
rand.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
apalis.workspace = true
apalis-redis.workspace = true
apalis-cron.workspace = true
redis.workspace = true
lapin.workspace = true
futures-lite.workspace = true
