[package]
name = "pylon"
description = "Pylon — a DDD application framework for building ERPs in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
figment.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
